- (textfile) multiple (append) allowed (NetSurf).
- (AND) and (OR) >2 arguments allowed (MCC_Date).
- Primitives allowed to mimic return values at the end of control blocks (MCC_Date).

0.1.0-alpha.15:
===============
- Default (welcome) and (exit) fix.
- Debug mode toggle (@debug 0/1)
- String delimiter fix.

0.1.0-alpha.16:
===============
- (askchoice) and (askoptions) control sequence filter.
- (askchoice) and (askoptions) invisible item default value fix.

0.1.0-alpha.17:
===============
- 32-bit numerical token fix.

0.1.0-alpha.18:
===============
- Error feedback regression fixed.

0.1.0-alpha.19:
===============
- GUI layout improvements.

0.1.0-alpha.20:
===============
- (askchoices) abort fix.
- WB tooltypes promotion.

0.1.0-alpha.21:
===============
- (message) abort fix.

0.1.0-alpha.22:
===============
- Default locale promoted to @language.

0.1.0-alpha.23:
===============
- Help bubble fix.

0.1.0-alpha.24:
===============
- (debug) prints undefined variables as they should.

0.1.0-alpha.25:
===============
- Naked (debug) allowed.
- (getsum) using Adler-32.
- DEFUSER / MINUSER tooltype promotion (welcome) fix.
- Installer overwrite on same version but different checksum.

0.1.0-alpha.26:
===============
- Application description fixed to make Exchange happy (polluks).
- MorphOS adaptations.

0.1.0-alpha.27:
===============
- Help bubble moved to the top.
- Improved error handling.

0.1.0-alpha.28:
===============
- Performance improvements.
- Aminet compliant naming.
- Improved file copy abort.
- Size reduction.

0.1.0-alpha.29:
===============
- '' handled by (exist).
- Proper AmigaDOS return values.
- Non naked options allowed (IconDeluxe).
- Default @app-name set to 'Test App' (mimic CBM Installer).
- Fixed (abort) button.
- (copyfiles) (choices) subdirectory fix.

0.1.0-alpha.30:
===============
- Locale support (German and Swedish<-FIXME translations included).
- (database) runtime cpu detection fixed.
- (copyfiles) (fonts) fixed.
- ?