@@ -1,3 +1,7 @@
+(copyfiles (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3 _cfs_/1.font","Line 1: No such file or directory '_cfs_/1' 0","rm -Rf _cfs_ _cfd_"
+(set @strict 0) (copyfiles (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3","1","test -f _cfd_/2 && test -f _cfd_/3 && test ! -f _cfd_/1 && test ! -f _cfd_/4 && rm -Rf _cfs_ _cfd_"
+(set @strict 0) (copyfiles (fonts) (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3 _cfs_/2.font","1","test -f _cfd_/2 && test -f _cfd_/2.font && test -f _cfd_/3 && test ! -f _cfd_/1 && test ! -f _cfd_/4 && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (choices "1" "2" "3" "4") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/2 _cfs_/3 _cfs_/2.font","Line 1: No such file or directory '_cfs_/1' 0","rm -Rf _cfs_ _cfd_"
 (copyfiles (fonts) (source "_cfs_/1") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (fonts) (all) (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (fonts) (choices "1") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
